# 17_Multimodal_QA

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md  vqa_evaluation.md
models/: README.md
notebooks/: COLAB_GUIDE.md  MMQA_Colab_Training_H100_AUTOPILOT.ipynb  _build_notebook.py
sample_data/: README.md
scripts/: smoke.sh
src/mmqa/: __init__.py  cli.py  config.py  logging_utils.py
src/mmqa/agent/: __init__.py  llm_orchestrator.py  policy.py  state.py  tools.py  vqa_agent.py
src/mmqa/analysis/: __init__.py  error_analysis.py  latency.py  per_type.py
src/mmqa/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/mmqa/automation/: __init__.py  autopilot.py
src/mmqa/autoreport/: __init__.py  artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/mmqa/data/: __init__.py  dataset.py  download_dataset.py  samples.py  synth_scene.py
src/mmqa/grading/: __init__.py  checklist.py
src/mmqa/models/: __init__.py  baseline.py  model_registry.py  question_type.py  vqa_model.py
src/mmqa/monitoring/: __init__.py  drift_report.py
src/mmqa/training/: __init__.py  evaluate.py  metrics.py  train_baseline.py  train_vqa.py  tune.py
src/mmqa/vision/: __init__.py  image_utils.py
tests/: conftest.py  test_agent.py  test_config.py  test_metrics.py  test_pipeline_eval.py  test_question_type.py  test_synth_scene.py
